--- a/app/animations.css
+++ b/app/animations.css
@@ -36,3 +36,64 @@
 .slide-up {
   animation: slideUp 600ms ease-in-out;
 }
+
+@keyframes scale-back-forth {
+  0%,
+  100% {
+    transform: scale(1); /* Start and end at the original size */
+  }
+  50% {
+    transform: scale(1.2); /* Scale up at midpoint */
+  }
+}
+
+.scaling-element {
+  animation: scale-back-forth 5s ease-in-out infinite; /* Duration and easing */
+}
+
+@keyframes translate-x-back-forth {
+  0% {
+    transform: translateX(0); /* Starting position */
+  }
+  50% {
+    transform: translateX(20px); /* Move to the right */
+  }
+  100% {
+    transform: translateX(0); /* Return to the starting position */
+  }
+}
+
+.translate-element {
+  animation: translate-x-back-forth 5s ease-in-out infinite; /* Apply the animation with smooth transition */
+}
+@keyframes translate-y-back-forth {
+  0% {
+    transform: translateY(0); /* Starting position */
+  }
+  50% {
+    transform: translateY(20px); /* Move to the right */
+  }
+  100% {
+    transform: translateY(0); /* Return to the starting position */
+  }
+}
+
+.translate-y-element {
+  animation: translate-y-back-forth 5s ease-in-out infinite; /* Apply the animation with smooth transition */
+}
+
+@keyframes translate-x-from-left {
+  0% {
+    transform: translateX(-150px); /* Starting position */
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0); /* Return to the starting position */
+    opacity: 1;
+  }
+}
+
+.translate-left-left-x {
+  animation: translate-x-from-left 500ms ease-out forwards; /* Apply the animation with smooth transition */
+}
