--- a/app/globals.css
+++ b/app/globals.css
@@ -13,14 +13,46 @@ body {
   }
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ffd600;
+  border-radius: 6px;
+  border: 3px solid rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-track {
+  background-color: #3f3f46;
+}
+
 .login-shape:after {
-  border-color: #ffd600;
+  border-color: #ffd700;
   position: absolute;
   height: 220px;
   width: 100%;
   clip-path: polygon(0 0, 100% 0, 29% 59%, 0 33%);
   left: -1px;
-  background-color: #ffd600;
+  background-color: #ffd700;
   top: -1px;
   content: "";
+}
+
+.slick-slide {
+  padding-right: 1.5rem;
+}
+
+.slick-slide > div > div {
+  display: flex !important;
+}
+
+.slick-prev:before,
+.slick-next:before,
+.slick-arrow {
+  display: none !important;
+}
+
+.slick-dots {
+  bottom: -40px !important;
 }
