--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 @layer utilities {
@@ -39,10 +40,6 @@ body {
   content: "";
 }
 
-.slick-slide {
-  padding-right: 1.5rem;
-}
-
 .slick-slide > div > div {
   display: flex !important;
 }
@@ -55,4 +52,46 @@ body {
 
 .slick-dots {
   bottom: -40px !important;
+}
+
+.slick-list {
+  margin: 0 -5px;
+}
+.slick-slide > div {
+  padding: 0 5px;
+}
+
+.slick-dots li.slick-active button:before {
+  content: "" !important;
+  background: #58cae3 !important;
+  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.25) !important;
+  width: 40px !important;
+  height: 9px !important;
+  display: inline-block !important;
+  margin: 0 6px !important;
+  padding: 3px 0 !important;
+  border-radius: 50px !important;
+  border: none !important;
+  transition: all 0.3s ease !important;
+}
+.slick-dots li button:before {
+  content: "" !important;
+  background: #58cae3 !important;
+  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.25) !important;
+  width: 9px !important;
+  height: 9px !important;
+  display: inline-block !important;
+  margin: 0 6px !important;
+  padding: 3px 0 !important;
+  border-radius: 50px !important;
+  border: none !important;
+  transition: all 0.3s ease !important;
+}
+
+.aos-animate[data-aos="slide-left"],
+.aos-animate[data-aos="slide-right"],
+.aos-animate[data-aos="slide-up"],
+.aos-animate[data-aos="fade-right"],
+.aos-animate[data-aos="fade-left"] {
+  opacity: 1;
 }
